<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fillViewport="true"
    tools:context=".MainActivity"
    tools:ignore="SpeakableTextPresentCheck">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".Register">

        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="414dp"
            android:layout_height="76dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/header"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/white"
                app:srcCompat="@drawable/ic_reg_header"
                android:contentDescription="header_regis" />

            <Button
                android:id="@+id/button"
                android:layout_width="138dp"
                android:layout_height="77dp"
                android:background="#00FFFFFF"
                android:drawableLeft="@drawable/ic_welcome_header_back"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/navbar"
                android:layout_width="205dp"
                android:layout_height="44dp"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/textregis"
                android:textColor="@color/white"
                android:textSize="19sp" />

        </FrameLayout>

        <EditText
            android:id="@+id/email"
            android:layout_width="340dp"
            android:layout_height="53dp"
            android:layout_marginTop="128dp"
            android:autofillHints="no"
            android:backgroundTint="@color/grey_20"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@color/grey_75"
            android:textColorHint="@color/grey_75"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.492"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/username"
            android:layout_width="340dp"
            android:layout_height="53dp"
            android:layout_marginTop="76dp"
            android:autofillHints="no"
            android:backgroundTint="@color/grey_20"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:textColor="@color/black"
            android:textColorHint="@color/grey_75"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.492"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/password_regist"
            android:layout_width="340dp"
            android:layout_height="53dp"
            android:layout_marginTop="348dp"
            android:autofillHints="no"
            android:backgroundTint="@color/grey_20"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textColorHint="@color/grey_75"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.492"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/phone"
            android:layout_width="340dp"
            android:layout_height="53dp"
            android:layout_marginTop="180dp"
            android:autofillHints="no"
            android:backgroundTint="@color/grey_20"
            android:ems="10"
            android:hint="@string/phonenumber"
            android:inputType="phone"
            android:textColor="@color/black"
            android:textColorHint="@color/grey_75"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.492"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/male"
            android:layout_width="88dp"
            android:layout_height="33dp"
            android:layout_marginTop="248dp"
            android:gravity="center"
            android:text="@string/male"
            android:textColor="@color/grey_75"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.247"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/personal"
            android:layout_width="88dp"
            android:layout_height="33dp"
            android:layout_marginTop="468dp"
            android:gravity="center"
            android:text="@string/personal"
            android:textColor="@color/grey_75"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.247"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/personal3"
            android:layout_width="230dp"
            android:layout_height="27dp"
            android:layout_marginTop="680dp"
            android:gravity="center"
            android:text="@string/term"
            android:textColor="@color/grey_75"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/organisasi"
            android:layout_width="102dp"
            android:layout_height="33dp"
            android:layout_marginTop="468dp"
            android:gravity="center"
            android:text="@string/organisasi"
            android:textColor="@color/grey_75"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.731"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/female"
            android:layout_width="88dp"
            android:layout_height="33dp"
            android:layout_marginTop="248dp"
            android:gravity="center"
            android:text="@string/Female"
            android:textColor="@color/grey_75"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.374"
            app:layout_constraintStart_toEndOf="@+id/male"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/radio_on"
            android:layout_width="32dp"
            android:layout_height="33dp"
            android:layout_marginTop="248dp"
            android:contentDescription="@string/radio_on"
            app:layout_constraintEnd_toStartOf="@+id/male"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_register_radio_on"
            tools:ignore="ImageContrastCheck" />

        <ImageView
            android:id="@+id/radio_on2"
            android:layout_width="32dp"
            android:layout_height="33dp"
            android:layout_marginTop="468dp"
            android:contentDescription="@string/radio_on"
            app:layout_constraintEnd_toStartOf="@+id/personal"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_register_radio_on"
            tools:ignore="ImageContrastCheck" />

        <ImageView
            android:id="@+id/radio_off"
            android:layout_width="32dp"
            android:layout_height="33dp"
            android:layout_marginTop="248dp"
            android:contentDescription="@string/radio_off"
            app:layout_constraintEnd_toStartOf="@+id/female"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_register_radio_off"
            tools:ignore="ImageContrastCheck" />

        <ImageView
            android:id="@+id/radio_off2"
            android:layout_width="32dp"
            android:layout_height="33dp"
            android:layout_marginTop="468dp"
            android:contentDescription="@string/radio_off"
            app:layout_constraintEnd_toStartOf="@+id/organisasi"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_register_radio_off"
            tools:ignore="ImageContrastCheck" />

        <EditText
            android:id="@+id/bloodtype"
            android:layout_width="140dp"
            android:layout_height="53dp"
            android:layout_marginTop="296dp"
            android:autofillHints="no"
            android:backgroundTint="@color/grey_20"
            android:ems="10"
            android:hint="@string/bloodtype"
            android:inputType="phone"
            android:textColor="@color/black"
            android:textColorHint="@color/grey_75"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.129"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/reshus"
            android:layout_width="140dp"
            android:layout_height="53dp"
            android:layout_marginTop="296dp"
            android:autofillHints="no"
            android:backgroundTint="@color/grey_20"
            android:ems="10"
            android:hint="@string/reshus"
            android:inputType="phone"
            android:textColor="@color/black"
            android:textColorHint="@color/grey_75"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.833"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextContrastCheck" />

        <ImageView
            android:id="@+id/arrow_dropdown"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@string/arrowdown"
            app:srcCompat="@drawable/ic_warrow_dropdown"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="150dp"
            tools:layout_editor_absoluteY="309dp" />

        <ImageView
            android:id="@+id/arrow_dropdown3"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@string/arrowdown"
            app:srcCompat="@drawable/ic_warrow_dropdown"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="342dp"
            tools:layout_editor_absoluteY="510dp" />

        <ImageView
            android:id="@+id/arrow_dropdown2"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@string/arrowdown"
            app:srcCompat="@drawable/ic_warrow_dropdown"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="342dp"
            tools:layout_editor_absoluteY="309dp" />

        <EditText
            android:id="@+id/repassword_regist2"
            android:layout_width="340dp"
            android:layout_height="53dp"
            android:layout_marginTop="400dp"
            android:autofillHints="no"
            android:backgroundTint="@color/grey_20"
            android:ems="10"
            android:hint="@string/repassword"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textColorHint="@color/grey_75"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.492"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/job"
            android:layout_width="340dp"
            android:layout_height="53dp"
            android:layout_marginTop="500dp"
            android:autofillHints="no"
            android:backgroundTint="@color/grey_20"
            android:ems="10"
            android:hint="@string/job"
            android:inputType="text"
            android:textColor="@color/black"
            android:textColorHint="@color/grey_75"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.492"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/address"
            android:layout_width="340dp"
            android:layout_height="53dp"
            android:layout_marginTop="552dp"
            android:autofillHints="no"
            android:backgroundTint="@color/grey_20"
            android:ems="10"
            android:hint="@string/alamat"
            android:inputType="text"
            android:textColor="@color/black"
            android:textColorHint="@color/grey_75"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.492"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />

        <EditText
            android:id="@+id/def_location"
            android:layout_width="340dp"
            android:layout_height="53dp"
            android:layout_marginTop="604dp"
            android:autofillHints="no"
            android:backgroundTint="@color/grey_20"
            android:ems="10"
            android:hint="@string/defaultaddress"
            android:inputType="text"
            android:textColor="@color/black"
            android:textColorHint="@color/grey_75"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.492"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />

        <ImageView
            android:id="@+id/location_icon"
            android:layout_width="38dp"
            android:layout_height="33dp"
            android:layout_marginTop="52dp"
            android:contentDescription="@string/alamat"
            app:layout_constraintEnd_toEndOf="@+id/address"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/address"
            app:layout_constraintTop_toTopOf="@+id/address"
            app:srcCompat="@drawable/ic_needed_location"
            tools:ignore="ImageContrastCheck" />

        <ImageView
            android:id="@+id/terms_on"
            android:layout_width="19dp"
            android:layout_height="18dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="20dp"
            android:contentDescription="@string/term"
            app:layout_constraintEnd_toStartOf="@+id/personal3"
            app:layout_constraintTop_toBottomOf="@+id/def_location"
            app:srcCompat="@drawable/ic_register_terms_on"
            tools:ignore="ImageContrastCheck" />

        <Button
            android:id="@+id/regisdone"
            android:layout_width="371dp"
            android:layout_height="57dp"
            android:layout_marginTop="720dp"
            android:backgroundTint="@color/white"
            android:text="@string/textregis"
            android:textColor="@color/light_blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:strokeColor="@color/light_blue"
            app:strokeWidth="2dp"
            tools:ignore="HardcodedText,TextContrastCheck" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>