<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fillViewport="true"
    tools:context=".MainActivity"
    tools:ignore="SpeakableTextPresentCheck">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_blue"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/title_sendcode"
            android:layout_width="360dp"
            android:layout_height="63dp"
            android:layout_marginTop="200dp"
            android:fontFamily="arial"
            android:text="@string/judul_bagian4"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/subtitle_sendcode"
            android:layout_width="313dp"
            android:layout_height="24dp"
            android:layout_marginTop="10dp"
            android:fontFamily="arial"
            android:gravity="center"
            android:text="@string/title_judul4"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_sendcode"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/kirim"
            android:layout_width="338dp"
            android:layout_height="58dp"
            android:layout_marginTop="400dp"
            android:backgroundTint="@color/light_blue"
            android:text="@string/kirim"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:strokeColor="@color/white"
            app:strokeWidth="2dp"
            tools:ignore="HardcodedText,TextContrastCheck" />

        <EditText
            android:id="@+id/enter_code"
            android:layout_width="371dp"
            android:layout_height="53dp"
            android:layout_marginTop="344dp"
            android:autofillHints="no"
            android:backgroundTint="@android:color/white"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/masukan_code"
            android:inputType="text"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/kirim_ulang"
            android:layout_width="220dp"
            android:layout_height="47dp"
            android:layout_marginTop="456dp"
            android:gravity="center"
            android:text="@string/kirim_ulang"
            android:textColor="@color/white"
            android:textColorLink="@color/white"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextContrastCheck" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>