<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fillViewport="true"
    tools:context=".MainActivity"
    tools:ignore="SpeakableTextPresentCheck">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_blue"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/almost"
            android:layout_width="270dp"
            android:layout_height="63dp"
            android:layout_marginTop="200dp"
            android:fontFamily="arial"
            android:text="@string/almost"
            android:textColor="@color/white"
            android:textSize="45sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/almost2"
            android:layout_width="313dp"
            android:layout_height="54dp"
            android:layout_marginTop="14dp"
            android:fontFamily="arial"
            android:gravity="center"
            android:text="@string/thank"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/almost"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/verifi_button"
            android:layout_width="338dp"
            android:layout_height="58dp"
            android:layout_marginTop="400dp"
            android:backgroundTint="@color/light_blue"
            android:text="@string/verif"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:strokeColor="@color/white"
            app:strokeWidth="2dp"
            tools:ignore="HardcodedText,TextContrastCheck" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>