<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fillViewport="true"
    tools:context=".MainActivity"
    tools:ignore="SpeakableTextPresentCheck">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_blue"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/logo_welcome"
            android:layout_width="371dp"
            android:layout_height="133dp"
            android:layout_marginTop="132dp"
            android:layout_weight="1"
            android:contentDescription="logowelcome"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_welcome_logo"
            tools:ignore="HardcodedText,ImageContrastCheck" />

        <EditText
            android:id="@+id/Username"
            android:layout_width="371dp"
            android:layout_height="53dp"
            android:layout_marginTop="288dp"
            android:autofillHints="no"
            android:backgroundTint="@android:color/white"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/password"
            android:layout_width="371dp"
            android:layout_height="53dp"
            android:layout_marginTop="344dp"
            android:backgroundTint="@android:color/white"
            android:ems="10"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="371dp"
            android:layout_height="57dp"
            android:layout_marginTop="416dp"
            android:backgroundTint="@color/light_blue"
            android:text="Login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:strokeColor="@color/white"
            app:strokeWidth="2dp"
            tools:ignore="HardcodedText,TextContrastCheck" />

        <TextView
            android:id="@+id/or"
            android:layout_width="371dp"
            android:layout_height="47dp"
            android:layout_marginTop="472dp"
            android:gravity="center"
            android:text="@string/or"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/facebook_login"
            android:layout_width="371dp"
            android:layout_height="57dp"
            android:layout_marginTop="524dp"
            android:backgroundTint="@color/light_blue"
            android:text="@string/loginfb"
            android:drawableLeft="@drawable/ic_welcome_fb_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:strokeColor="@color/white"
            app:strokeWidth="2dp"
            tools:ignore="HardcodedText,TextContrastCheck" />

        <TextView
            android:id="@+id/registere"
            android:layout_width="371dp"
            android:layout_height="47dp"
            android:layout_marginTop="588dp"
            android:gravity="center"
            android:text="@string/regist"
            android:textColor="@color/white"
            android:textColorLink="@color/white"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextContrastCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>